Fix after adding slash previous one disappears in organize collection

BUG: 296136
FIXED-IN: 2.7